--- a/client/src/layouts/Central/Banner/Banner.style.scss
+++ b/client/src/layouts/Central/Banner/Banner.style.scss
@@ -1,13 +1,29 @@
 @import "../../../globals.scss";
 
+@keyframes animation {
+  from {background-color: red;}
+  12% {background-color: rgb(212, 0, 255);}
+  24% {background-color: rgb(111, 0, 255);}
+  36% {background-color: rgb(0, 4, 255);}
+  48% {background-color: rgb(0, 157, 255);}
+  60% {background-color: rgb(0, 255, 136);}
+  72% {background-color: rgb(225, 255, 0);}
+  84% {background-color: rgb(255, 170, 0);}
+  to {background-color: red;}
+}
+
 .Banner {
   padding: 0.75rem;
   width: 100%;
   display: flex;
   align-items: center;
   height: 3rem;
-  background-color: $theme;
+  // background-color: $theme;
   gap: 2rem;
+  animation-name: animation;
+  animation-duration: 10s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 
   img {
     height: 3rem;
